--- a/css/style.scss
+++ b/css/style.scss
@@ -12,16 +12,16 @@
     margin: 0px auto;
 }
 
-@font-face {
-    font-family: "Lato Regular";
-    src: url("../font/Lato2OFL/Lato-Regular.ttf");
-}
-
 @media (min-width: 1200px) {
     .container {
         width: 1170px;
         box-sizing: content-box;
     }
+}
+
+@font-face {
+    font-family: "Lato Regular";
+    src: url("../font/Lato2OFL/Lato-Regular.ttf");
 }
 
 @font-face {
@@ -258,9 +258,9 @@ header {
                 height: 600px;
             }
             .item1 {
-                background-image: url("../image/gon_shop_01_home.png");
-                background-repeat: no-repeat;
-                background-size: contain;
+                background: url("../image/gon_shop_01_home.png") center center;
+                background-repeat: repeat;
+                background-size: cover;
                 .container {
                     .slideCaption {
                         p {
@@ -269,31 +269,137 @@ header {
                                 font-family: $font-tophead;
                                 color: rgb( 63, 63, 63);
                                 text-transform: uppercase;
+                                margin-top: 154px;
+                                margin-bottom: 15px;
                             }
                             &:nth-child(2) {
                                 font-size: 70px;
                                 color: rgb( 63, 63, 63);
                                 font-family: $font-raleway-bold;
+                                line-height: 0.9;
+                                margin-bottom: 28px;
                             }
                             &:nth-child(3) {
                                 font-size: 18px;
                                 font-family: $font-lato-italic;
                                 color: rgb( 63, 63, 63);
+                                margin-bottom: 23px;
                             }
+                        }
+                    }
+                    .slide-button {
+                        .viewMore {
+                            width: 160px;
+                            height: 50px;
+                            float: left;
+                            text-align: center;
+                            font-size: 14px;
+                            font-family: $font-category;
+                            color: white;
+                            background: #3f3f3f;
+                            line-height: 50px;
+                            margin-right: 10px;
+                        }
+                        .buyNow {
+                            width: 160px;
+                            height: 50px;
+                            float: left;
+                            text-align: center;
+                            font-family: $font-category;
+                            color: rgb( 63, 63, 63);
+                            border-style: solid;
+                            border-width: 2px;
+                            border-color: rgb( 64, 190, 167);
+                            background-color: rgb( 255, 255, 255);
+                            box-sizing: border-box;
+                            line-height: 50px;
                         }
                     }
                 }
             }
-            // .item2 {
-            //     background-image: url("../image/slider2.png");
-            //     background-repeat: no-repeat;
-            //     background-size: contain;
-            // }
-            // .item3 {
-            //     background-image: url("../image/slider3.png");
-            //     background-repeat: no-repeat;
-            //     background-size: contain;
-            // }
+            .item2 {
+                background: url("../image/slider2.png");
+                background-repeat: repeat;
+                background-size: cover;
+            }
+            .item3 {
+                background: url("../image/slider3.png") center center;
+                background-repeat: repeat;
+                background-size: cover;
+            }
+        }
+    }
+}
+
+#freeService {
+    margin-top: 29px;
+}
+
+@mixin infoProduct {
+    .nameProduct {
+        line-height: 0.9;
+        a {
+            font-size: 13.057px;
+            font-family: "Lato Regular";
+            color: rgb( 184, 184, 184);
+            text-transform: uppercase;
+            text-decoration: none;
+        }
+    }
+    .depProduct {
+        font-size: 14.062px;
+        font-family: "Lato Regular";
+        color: rgb( 63, 63, 63);
+        margin-bottom: 7px;
+    }
+    .price {
+        ins {
+            text-decoration: none;
+            color: rgb( 63, 63, 63);
+        }
+        font-size: 16.071px;
+        font-family: "Lato Bold";
+        margin-bottom: 5px;
+    }
+}
+
+#contentProduct {
+    .container {
+        .row {
+            .col-md-3 {
+                .topRated {
+                    border-style: solid;
+                    border-width: 1px;
+                    border-color: rgb( 230, 230, 230);
+                    background-color: rgb( 255, 255, 255);
+                    padding: 8px 15px 21px 20px;
+                    box-sizing: border-box;
+                    .topRatedBoxTitle {
+                        font-size: 18px;
+                        font-family: $font-raleway-bold;
+                        text-transform: uppercase;
+                        text-align: center;
+                        padding-bottom: 15px;
+                        // width: 230px;
+                        box-sizing: border-box;
+                        border-bottom: 1px solid rgb( 230, 230, 230);
+                        color: rgb( 63, 63, 63);
+                    }
+                    .box-top-rated-product {
+                        // padding-top: 20px;
+                        padding-bottom: 20px;
+                        border-bottom: 1px solid rgb( 230, 230, 230);
+                        .media {
+                            margin-right: 20px;
+                        }
+                        .infoProduct {
+                            @include infoProduct();
+                            display: table-cell;
+                            vertical-align: top;
+                        }
+                    }
+                }
+            }
         }
     }
 }
