--- a/css/style.css
+++ b/css/style.css
@@ -541,33 +541,158 @@ header #main-nav {
     box-sizing: border-box;
     border-bottom: 1px solid #e6e6e6;
     color: #3f3f3f; }
-  #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product {
+  #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media {
+    padding-top: 20px;
     padding-bottom: 20px;
-    border-bottom: 1px solid #e6e6e6; }
-    #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .media {
-      margin-right: 20px; }
-    #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct {
-      display: table-cell;
-      vertical-align: top; }
-      #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct .nameProduct {
-        line-height: 0.9; }
-        #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct .nameProduct a {
+    box-sizing: border-box;
+    border-bottom: 1px solid #e6e6e6;
+    margin-top: 0px; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media:last-child {
+      border-bottom: 0px; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media > .pull-left {
+      padding-right: 20px; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .nameProduct {
+      line-height: 0.9;
+      margin-bottom: 6px; }
+      #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .nameProduct a {
+        font-size: 13.057px;
+        font-family: "Lato Regular";
+        color: #b8b8b8;
+        text-transform: uppercase;
+        text-decoration: none; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .depProduct {
+      font-size: 14.062px;
+      font-family: "Lato Regular";
+      color: #3f3f3f;
+      margin-bottom: 6px; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .price {
+      font-size: 16.071px;
+      font-family: "Lato Bold"; }
+      #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .price ins {
+        text-decoration: none;
+        color: #3f3f3f; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .nameProduct {
+      margin-bottom: 6px; }
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .depProduct,
+    #contentProduct .container .row .col-md-3 .topRated .box-topRated-product .media .media-body .rating {
+      margin-bottom: 6px; }
+#contentProduct .container .row .col-md-3 #sale-slide {
+  margin-top: 32px; }
+#contentProduct .container .row .col-md-9 .featuresProduct {
+  border: 1px solid #e6e6e6;
+  padding: 10px 19px 10px 19px; }
+  #contentProduct .container .row .col-md-9 .featuresProduct .box-title-carousle {
+    padding-bottom: 10px;
+    border: 1px solid #e6e6e6; }
+  #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 {
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 27px; }
+    #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .nameProduct {
+      line-height: 0.9;
+      margin-bottom: 6px; }
+      #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .nameProduct a {
+        font-size: 13.057px;
+        font-family: "Lato Regular";
+        color: #b8b8b8;
+        text-transform: uppercase;
+        text-decoration: none; }
+    #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .depProduct {
+      font-size: 14.062px;
+      font-family: "Lato Regular";
+      color: #3f3f3f;
+      margin-bottom: 6px; }
+    #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .price {
+      font-size: 16.071px;
+      font-family: "Lato Bold"; }
+      #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .price ins {
+        text-decoration: none;
+        color: #3f3f3f; }
+    #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .nameProduct {
+      margin-top: 19px;
+      margin-bottom: 7px; }
+    #contentProduct .container .row .col-md-9 .featuresProduct .row-product .col-md-3 .depProduct {
+      margin-bottom: 6px; }
+#contentProduct .container .row .col-md-9 .banner-sale {
+  margin-top: 30px; }
+#contentProduct .container .row .col-md-9 .specialProduct {
+  padding: 17px 20px 30px 20px;
+  border: 1px solid #e6e6e6;
+  margin-top: 30px; }
+  #contentProduct .container .row .col-md-9 .specialProduct .box-title {
+    font-size: 18px;
+    font-family: "Raleway Bold";
+    text-align: center;
+    padding-bottom: 18px;
+    border-bottom: 1px solid #e6e6e6;
+    box-sizing: border-box;
+    text-transform: uppercase;
+    line-height: 0.9; }
+  #contentProduct .container .row .col-md-9 .specialProduct .row-special-product {
+    padding-top: 20px; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 {
+      text-align: center; }
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .nameProduct {
+        line-height: 0.9;
+        margin-bottom: 6px; }
+        #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .nameProduct a {
           font-size: 13.057px;
           font-family: "Lato Regular";
           color: #b8b8b8;
           text-transform: uppercase;
           text-decoration: none; }
-      #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct .depProduct {
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .depProduct {
         font-size: 14.062px;
         font-family: "Lato Regular";
         color: #3f3f3f;
-        margin-bottom: 7px; }
-      #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct .price {
+        margin-bottom: 6px; }
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .price {
         font-size: 16.071px;
-        font-family: "Lato Bold";
-        margin-bottom: 5px; }
-        #contentProduct .container .row .col-md-3 .topRated .box-top-rated-product .infoProduct .price ins {
+        font-family: "Lato Bold"; }
+        #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .price ins {
           text-decoration: none;
           color: #3f3f3f; }
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-4 .nameProduct {
+        margin-top: 19px; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-link {
+      padding-right: 20px; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-body .nameProduct {
+      line-height: 0.9;
+      margin-bottom: 6px; }
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-body .nameProduct a {
+        font-size: 13.057px;
+        font-family: "Lato Regular";
+        color: #b8b8b8;
+        text-transform: uppercase;
+        text-decoration: none; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-body .depProduct {
+      font-size: 14.062px;
+      font-family: "Lato Regular";
+      color: #3f3f3f;
+      margin-bottom: 6px; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-body .price {
+      font-size: 16.071px;
+      font-family: "Lato Bold"; }
+      #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row .col-md-6 .media .media-body .price ins {
+        text-decoration: none;
+        color: #3f3f3f; }
+    #contentProduct .container .row .col-md-9 .specialProduct .row-special-product .col-md-8 .row:nth-child(2) {
+      padding-top: 30px;
+      padding-bottom: 30px; }
+#contentProduct .container .row .col-md-9 .newsLetter {
+  text-align: center;
+  background: url("../image/background-newsletter.png") no-repeat center center;
+  background-size: cover; }
+  #contentProduct .container .row .col-md-9 .newsLetter h3 {
+    font-size: 30px;
+    font-family: "Raleway Bold";
+    line-height: 0.8;
+    margin: 0px;
+    padding-top: 52px;
+    padding-bottom: 30px; }
+  #contentProduct .container .row .col-md-9 .newsLetter .text-newsletter {
+    font-size: 14px;
+    font-family: "Lato Regular";
+    color: #3f3f3f; }
 
 /*# sourceMappingURL=style.css.map */
